--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-formasaurus",
-  "version": "0.9.3",
+  "version": "0.9.4",
   "description": "A flexible layout and validation component for forms in React Native.",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   "dependencies": {
     "color-js": "^1.0.4",
     "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
     "react-native-vector-icons": "^4.0.0"
   }
 }
